--- a/views/livestream/livestreaming.pug
+++ b/views/livestream/livestreaming.pug
@@ -6,21 +6,21 @@ block content
     div.row
         div.col-sm-2
             h4
-                a(href=`/user/${user.channelUrl}`) Channel Page
-        div.col-sm-2
-            h4
-                a(href="/account/viewHistory") View History
-        div.col-sm-2
-            h4
-                a(href="/account/reactHistory") React History
-        div.col-sm-2
-            h4
-                a.livestream-button Livestreaming
-                //a.livestreaming-link(href=`/user/${user.channelUrl}/live/staging`) Livestreaming
-        div.col-sm-2
-            h4 Credit ($#{user.credit/100})
-        div.col-sm-2
-            h4 Earnings ($#{user.receivedCredit / 100})
+                a(href=`/account`) Account Page
+        //div.col-sm-2
+        //    h4
+        //        a(href="/account/viewHistory") View History
+        //div.col-sm-2
+        //    h4
+        //        a(href="/account/reactHistory") React History
+        //div.col-sm-2
+        //    h4
+        //        a.livestream-button Livestreaming
+        //        //a.livestreaming-link(href=`/user/${user.channelUrl}/live/staging`) Livestreaming
+        //div.col-sm-2
+        //    h4 Credit ($#{user.credit/100})
+        //div.col-sm-2
+        //    h4 Earnings ($#{user.receivedCredit / 100})
         //div.col-sm-2
         //  h3
         //    a(href=`/account/creditHistory`) Credit History
