--- a/views/livestream/rtmp.pug
+++ b/views/livestream/rtmp.pug
@@ -19,12 +19,22 @@ block content
         script.
           var channelUrl = '#{channelUrl}'
 
+          var video = document.getElementById('video');
+
+          var playlistFile = '/' + channelUrl + '.m3u8'
+
           if (Hls.isSupported()) {
-            var video = document.getElementById('video');
             var hls = new Hls();
-            hls.loadSource('/' + channelUrl + '.m3u8');
+            hls.loadSource(playlistFile);
             hls.attachMedia(video);
             hls.on(Hls.Events.MANIFEST_PARSED, function () {
+              video.play();
+            });
+          }
+
+          else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+            video.src = playlistFile;
+            video.addEventListener('loadedmetadata', function () {
               video.play();
             });
           }
