--- a/views/livestream/rtmp.pug
+++ b/views/livestream/rtmp.pug
@@ -1,11 +1,18 @@
 extends ../layout
 
 block content
+
+
+    style.
+      .container {
+        width: 100%; !important;
+      }
+
     body
         script(src='https://cdn.jsdelivr.net/npm/hls.js@latest')
-        video#video(controls)
+        video#video(controls style="max-width:100%;")
 
-        .container
+        .videoContainer(style="")
             .row
                 .col-md-12(style="margin-bottom:100px")
                     h2.userAmount Users In Room: 1
