beginning of docs page

--- a/views/public/docs.pug
+++ b/views/public/docs.pug
@@ -23,4 +23,12 @@ block content
 
             h3(style="font-size:30px;margin-bottom:27px;") NodeTube Docs
 
-            p.fw(style="font-size:25px") Here are the docs that you can use to learn how to use NodeTube
+            p.fw(style="font-size:25px;margin-bottom:20px;") Here are the docs that you can use to learn how to use NodeTube:
+
+            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+
+            p.fw(style="font-size:24px") How To Install NodeTube (No Audio)
+
+            p.fw(style="font-size:18px") How to install your own version of NodeTube, the code that powers NewTube.app
+
+
