--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -1,6 +1,6 @@
 script.
 
-  $('.no-user-comment-form').on('click touchstart', function(event){
+  $('.no-user-comment-form').on('release click', function(event){
     event.preventDefault();
     // swal("Please register to leave a comment")
 
