--- a/views/mediaPlayerPartials/reactJs.pug
+++ b/views/mediaPlayerPartials/reactJs.pug
@@ -43,7 +43,7 @@ script.
   })
 
 
-  $('.react img').on('touchstart click', function (e) {
+  $('.react img').on('release click', function (e) {
     if(!user){
       return swal({
           title: "Please register to react to content",
