--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -148,7 +148,7 @@ style.
 
 if !user
   script.
-    $('.subscribed-link').on('touchstart click', function(e){
+    $('.subscribed-link').on('release click', function(e){
       e.preventDefault();
 
       swal({
