--- a/views/mediaPlayerPartials/reactFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/reactFunctionalityJs.pug
@@ -43,7 +43,7 @@ script.
   })
 
 
-  $('.react img').on('touchstart click', function (e) {
+  $('.react img').on('release click', function (e) {
 
     // dont move browser
     e.preventDefault();
