--- a/views/mediaPlayerPartials/subscribeFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/subscribeFunctionalityJs.pug
@@ -7,7 +7,7 @@ script.
 
   //  console.log(alreadySubbed + ' already subbed');
 
-  $('.subscribe').on('touchstart click', function (e) {
+  $('.subscribe').on('release click', function (e) {
 
     // if user is not logged in
     if (!user) {
