--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -50,8 +50,8 @@ style.
           else
             a(href=`/media/subscribed`) Subscribed (0)
 
-        li(class=(title == 'Docs') ? 'active' : undefined)
-          a(href=`/docs`) Docs
+        //li(class=(title == 'Docs') ? 'active' : undefined)
+        //  a(href=`/docs`) Docs
       ul.nav.navbar-nav.navbar-right
         if user
 
