--- a/views/livestream/livestreaming.pug
+++ b/views/livestream/livestreaming.pug
@@ -5,7 +5,7 @@ block content
 
     div.row
         div.col-sm-2
-            h4
+            h3.fw
                 a(href=`/account`) Account Page
         //div.col-sm-2
         //    h4
@@ -29,7 +29,7 @@ block content
     hr
 
 
-    h2.text-center Livestreaming
+    h1.fw.text-center Livestreaming
 
     if user.plan == 'plus'
 
