--- a/views/livestream/rtmp.pug
+++ b/views/livestream/rtmp.pug
@@ -63,8 +63,8 @@ block content
           // var webSocketUrl = 'wss://' + location.host + '/one2many';
 
           if (env == 'production') {
-            webSocketUrl = 'wss://' + 'live.pewtube.com' + '/stream/' + username;
-            messageUrl = 'wss://' + 'live.pewtube.com' + '/messages/' + username;
+            webSocketUrl = 'wss://' + 'newtube.app' + '/stream/' + username;
+            messageUrl = 'wss://' + 'newtube.app' + '/messages/' + username;
           } else {
             webSocketUrl = 'wss://' + 'localhost:8080' + '/stream/' + username;
             messageUrl = 'wss://' + 'localhost:8080' + '/messages/' + username;
