--- a/views/livestream/rtmp.pug
+++ b/views/livestream/rtmp.pug
@@ -6,11 +6,13 @@ block content
     style.
       .container {
         width: 100%; !important;
+        text-align:center;
+
       }
 
     body
         script(src='https://cdn.jsdelivr.net/npm/hls.js@latest')
-        video#video(controls style="max-width:100%;")
+        video#video(controls style="max-width:100%;max-height: 800px;margin-top: 30px;")
 
         .videoContainer(style="")
             .row
