--- a/views/mediaPlayerPartials/reactFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/reactFunctionalityJs.pug
@@ -74,6 +74,7 @@ script.
     var oldEmoji = activeEmoji
     var emoji = $(this).attr('class')
     activeEmoji = emoji;
+    var unreact = (oldEmoji == activeEmoji) // the old react is the same as the new (user wants to remove react)
 
     // decrement old emoji if needed
     if(oldEmoji){
@@ -85,10 +86,17 @@ script.
 
     }
 
-    var newEmojiValue = $('p.' + emoji).text()
-    var incrementedValue = parseInt(newEmojiValue) + 1
-    console.log(newEmojiValue)
-    var updatedEmojiValue = $('p.' + emoji).text(incrementedValue)
+    if(unreact) { // if the user removed the react, there is no active emoji
+      activeEmoji = null
+      $(".react img").css({ // reset all reacts opacity
+        opacity: 1
+      })
+    } else { // if user chose a different react, update the new react value
+      var newEmojiValue = $('p.' + emoji).text()
+      var incrementedValue = parseInt(newEmojiValue) + 1
+      console.log(newEmojiValue)
+      var updatedEmojiValue = $('p.' + emoji).text(incrementedValue)
+    }
 
     var data = {
       _csrf : csrf,
