--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -14,11 +14,16 @@ footer
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://riot.im/app/#/room/#nodetube:matrix.org" target="_blank") Riot.im
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/nodetube_org" target="_blank") Twitter
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/nodetube" target="_blank") Reddit
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/VirusOutbreak" target="_blank") r/VirusOutbreak
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://fosstodon.org/@nodetube" target="_blank") Fosstodon
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://virusoutbreak.wtf") virusoutbreak.wtf
+
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://nullvideo.com/media/recent/rss") RSS
+
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://upvotocracy.com/a/CoronaVirus" target="_blank") a/CoronaVirus
+
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://amzn.to/2HTQgnl" target="_blank") Shop
 
     a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
