--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -50,7 +50,7 @@ block content
                     br
 
 
-                each upload in uploads
+                each upload, index in uploads
                     div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:353px;")
 
                         include ../viewPartials/uploadThumbnail
