--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -51,7 +51,7 @@ block content
                     h2.fw.categoryDisplayName(style="font-size:42px") #{categoryObj.displayName}
                     br
 
-                each upload in uploads
+                each upload, index in uploads
                     if upload.uploader
                         div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:335px;")
                             div(style="width:100%")
