--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -1,22 +1,27 @@
 a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" )
-    if upload.thumbnails && upload.thumbnails.custom
-        img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
+    div.thumbnail(style="position: relative")
+        if upload.thumbnails && upload.thumbnails.custom
+            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
 
-    else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
-        img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="")
+        else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
+            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="")
 
-    else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
-        img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
+        else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
+            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
 
-    else if upload.fileType == 'video' && !upload.thumbnailUrl
-        img.preview-image(src="/no_img.png")
+        else if upload.fileType == 'video' && !upload.thumbnailUrl
+            img.preview-image(src="/no_img.png")
 
-    else if upload.fileType == 'image'
-        // TODO: have to fix this
-        img.preview-image(src=`${uploadServer}/${channelUrl|| upload.uploader.channelUrl }/${upload.uniqueTag}${upload.fileExtension}` style="")
+        else if upload.fileType == 'image'
+            // TODO: have to fix this
+            img.preview-image(src=`${uploadServer}/${channelUrl|| upload.uploader.channelUrl }/${upload.uniqueTag}${upload.fileExtension}` style="")
 
-    else if upload.fileType == 'audio'
-        img.preview-image(src='/images/audio.svg')
+        else if upload.fileType == 'audio'
+            img.preview-image(src='/images/audio.svg')
 
-    else if upload.fileType == 'unknown'
-        img.preview-image(src='/images/no_img.png')
+        else if upload.fileType == 'unknown'
+            img.preview-image(src='/images/no_img.png')
+        
+        if upload.fileType == 'audio' || upload.fileType == 'video'
+            div.duration(style="position: absolute; bottom: 0; right: 0; background-color: black; opacity: 0.7; padding: 3px; margin: 5px; border-radius: 5px")
+                span(style="color: white") #{durations[index]}
