--- a/views/admin/subscriptions.pug
+++ b/views/admin/subscriptions.pug
@@ -11,8 +11,8 @@ block content
                 p(style="display:inline") Driving Upload: &nbsp
                 p(style="display:inline-block")
                     a(href=`/uploads/${subscription.subscribingUser.channelUrl}/${subscription.drivingUpload.uniqueTag}`) #{subscription.drivingUpload.title}
-            p Uploader: #{subscription.subscribingUser.channelUrl}
-            p Subscriber : #{subscription.subscribedToUser.channelUrl}
+            p Uploader: #{subscription.subscribedToUser.channelUrl}
+            p Subscriber : #{subscription.subscribingUser.channelUrl}
 
             br
             br
