--- a/views/media.pug
+++ b/views/media.pug
@@ -367,7 +367,7 @@ block extra_js
 
 
 block extra_css
-  link(rel="stylesheet" href="https://cdn.plyr.io/3.3.21/plyr.css")
+  link(rel="stylesheet" href="https://cdn.plyr.io/3.5.10/plyr.css")
   style.
     .nodetube-pro {
         background: #edeeee;
@@ -404,7 +404,7 @@ block extra_footer_js
 
 
   script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js")
-  script(src="https://cdn.plyr.io/3.3.21/plyr.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.5.10/plyr.min.js")
   script.
     var clipboard = new ClipboardJS('.copy-button');
 
