--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -24,4 +24,4 @@ a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.
         
         if upload.fileType == 'audio' || upload.fileType == 'video'
             div.duration(style="position: absolute; bottom: 0; right: 0; background-color: black; opacity: 0.7; padding: 3px; margin: 5px; border-radius: 5px")
-                span(style="color: white") #{durations[index]}
+                span(style="color: white") #{upload.formattedDuration}
