--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -64,8 +64,8 @@ script.
   var plyr_options = {
     autoplay: autoplay,
     clickToPlay: true,
-    controls: ['play-large', 'play', 'mute', 'volume', 'current-time', 'progress', 'settings', 'fullscreen'],
-    settings: ['speed'],
+    controls: ['play-large', 'play','progress', 'current-time', 'duration', 'mute', 'volume', 'settings', 'fullscreen', 'download'],
+    settings: ['speed', 'captions', 'quality', 'speed', 'loop']
   };
 
   // Create the plyr instances - this defines players[0] as our primary player.
