progress and sound shows with a cursor

--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -89,3 +89,7 @@ script.
     // add max height
     $('.display-element').css('max-height','620px')
   });
+
+  $("[data-plyr=seek]").css('cursor','pointer')
+
+  $("[data-plyr=volume]").css('cursor','pointer')
