--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -51,3 +51,6 @@ block content
 
                         h3.
                                 Thank you!
+
+                        h3.
+                                For copyright claims, or any other reason, please contact nodetubeapp[at]gmail.com
