--- a/views/viewPartials/mouseOverJavascript.pug
+++ b/views/viewPartials/mouseOverJavascript.pug
@@ -14,4 +14,4 @@ script.
       //$(this).css("width", width / 1.10);
       //$(this).css("height", height / 1.10);
     }
-  }, '.thumbnail');
+  }, '.preview-image');
