--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -21,7 +21,7 @@ block content
         .container
                 div(style="padding-top:75px;max-width:629px;margin:0 auto;")
 
-                        h3 NodeTube was created to allow anyone with basic technical skills to run their own media hosting platform
+                        h3 NewTube is powered by NodeTube, which was created to allow anyone with basic technical skills to run their own media hosting platform
                         br
                         h3(style="display:inline")  Please check out the
                                 a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube") GitHub Repo
@@ -36,21 +36,25 @@ block content
                                 |  and
                                 a.left(href='https://reddit.com/r/nodetube') Reddit
 
-                        h3 If you find the project interesting and want to help it succeed please send the link to this live instance and the Github repo around on places like Reddit, Hacker News, Twitter, Facebook, Discord.  Self-promotion is really frowned upon on the internet and the less time I have to do bringing people’s attention to the project the more I can focus on working on improving the software
+                        // h3 If you find the project interesting and want to help it succeed please send the link to this live instance and the Github repo around on places like Reddit, Hacker News, Twitter, Facebook, Discord.  Self-promotion is really frowned upon on the internet and the less time I have to do bringing people’s attention to the project the more I can focus on working on improving the software
 
 
-                        h3.
-                                Github Repo Link
-                        h3.
-                                https://github.com/mayeaux/nodetube
+                        //h3.
+                        //        Github Repo Link
+                        h3
+                                a(href="https://github.com/mayeaux/nodetube") Github Repo
 
-                        h3.
-                                Live Instance Link
-                        h3.
-                                https://nodetube.live
+                        //h3.
+                        //        Live Instance Link
+                        h3
+                                a(href="https://newtube.app") Live Instance
+                        h3
+                                a(href="https://newtube.app") How-To
+
+
 
                         h3.
                                 Thank you!
 
                         h3.
-                                For copyright claims, or any other reason, please contact nodetubeapp[at]gmail.com
+                                For copyright claims, or any other reason, please contact newtubedotapp[at]gmail.com
