--- a/views/public/docs.pug
+++ b/views/public/docs.pug
@@ -16,6 +16,10 @@ block content
             margin-left:5px
         }
 
+        .videoHeader {
+            margin-top:11px;
+        }
+
 
 
     .container
@@ -23,12 +27,79 @@ block content
 
             h3(style="font-size:30px;margin-bottom:27px;") NodeTube Docs
 
-            p.fw(style="font-size:25px;margin-bottom:20px;") Here are the docs that you can use to learn how to use NodeTube:
+            p.fw(style="font-size:25px;") Here are the video tutorials that you can use
+
+            p.fw(style="font-size:25px;margin-bottom:20px;") to learn how to use NodeTube's functionality
+            br
+            br
+            br
 
             iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
-            p.fw(style="font-size:24px") How To Install NodeTube (No Audio)
+            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use NodeTube
 
-            p.fw(style="font-size:18px") How to install your own version of NodeTube, the code that powers NewTube.app
+            p.fw(style="font-size:18px") Popular Page, Recent Page, Media Page (No login necessary)
+
+            br
+            br
+            br
+            br
+            br
+
+            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+
+            p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A User
+
+            p.fw(style="font-size:18px") Uploading Videos/Audio/Images, Livestreams, Other Features
+
+            br
+            br
+            br
+            br
+            br
+
+            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+
+            p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Plus User
+
+            p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+
+            br
+            br
+            br
+            br
+            br
+
+            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+
+            p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Moderator/Admin
+
+            p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
 
 
+            br
+            br
+            br
+            br
+            br
+
+
+            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+
+            p.videoHeader.fw(style="font-size:24px") How To Install NodeTube
+
+            p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+
+
+            br
+            br
+            br
+            br
+            br
+
+
+            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+
+            p.videoHeader.fw(style="font-size:24px") How To Contribute To The NodeTube Codebase
+
+            p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
