about to fix duration header

--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -48,8 +48,8 @@ block content
                         //        Live Instance Link
                         h3
                                 a(href="https://newtube.app") Live Instance
-                        h3
-                                a(href="https://newtube.app") How-To
+                        //h3
+                        //        a(href="https://newtube.app") How-To
 
 
 
