--- a/views/public/docs.pug
+++ b/views/public/docs.pug
@@ -74,7 +74,7 @@ block content
 
             p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Moderator/Admin
 
-            p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+            //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
 
 
             br
@@ -88,7 +88,7 @@ block content
 
             p.videoHeader.fw(style="font-size:24px") How To Install NodeTube
 
-            p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+            //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
 
 
             br
@@ -102,4 +102,4 @@ block content
 
             p.videoHeader.fw(style="font-size:24px") How To Contribute To The NodeTube Codebase
 
-            p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+            //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
